y-Auto/nfs-storage.yaml
# ------------------- NSF-Storage Namespace ------------------- #

apiVersion: v1
kind: Namespace
metadata:
  name: nfs-storage
  labels:
    name: nfs-storage

---
# ------------------- NSF-Storage Deployment ------------------- #

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nfs-client-provisioner
  namespace: nfs-storage
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nfs-client-provisioner
    spec:
      serviceAccount: nfs-client-provisioner
      containers:
        - name: nfs-client-provisioner
          image: quay.io/external_storage/nfs-client-provisioner-arm:latest
          volumeMounts:
            - name: nfs-client-root
              mountPath: /persistentvolumes
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - nfs-client-provisioner
              topologyKey: kubernetes.io/hostname

      volumes:
        - name: nfs-client-root
          nfs:
            server: 192.168.1.50
            path: /mnt/storage
