y-Auto/hello-world.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hellow-world-deployment
  labels:
    app: hellow-world
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: hellow-world
  template:
    metadata:
      labels:
        k8s-app: hellow-world
    spec:
      containers:
        - image: arm64v8/nginx
          name: hellow-world
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: hellow-world-service
  labels:
    k8s-app: hellow-world-service
spec:
  selector:
    k8s-app: hellow-world
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellow-world-ingress
  labels:
    traffic-type: external
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
    traefik.frontend.redirect.entryPoint: https
    traefik.frontend.redirect.regex: ^http://(.*)
    traefik.frontend.redirect.replacement: https://$1
spec:
  rules:
  - host: helloworld.goldenpassport.net
    http:
      paths:
      - path: /
        backend:
          serviceName: hellow-world-service
          servicePort: 80
